<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:gravity="fill_horizontal"
=======
    android:contentDescription="@string/song_name"
>>>>>>> b0fadad16abd33152d34e3baf08865c47ca3dae8
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.coursera.melobellies.MainActivity" >

<<<<<<< HEAD
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="148dp"
=======
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/editText1"
        android:contentDescription="@string/song_name"
        android:scaleType="centerCrop"
        android:src="@drawable/meteor2" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contentDescription="@string/app_name"
>>>>>>> b0fadad16abd33152d34e3baf08865c47ca3dae8
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/string_test" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/imageView1"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/music_copyright"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:text="Button" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/editText3"
        android:layout_alignLeft="@+id/imageView1"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/app_name"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:text="@string/song_lyric"
        android:textColor="#ffef4f" />

</RelativeLayout>
